--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
+.class
+.log
+.pyc
+.swp
 .DS_Store
 .atom/
 .buildlog/
@@ -10,9 +10,9 @@
 .svn/
 
 # IntelliJ related
-*.iml
-*.ipr
-*.iws
+.iml
+.ipr
+.iws
 .idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
@@ -21,8 +21,8 @@
 #.vscode/
 
 # Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+/doc/api/
+/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
@@ -30,7 +30,14 @@
 .pub-cache/
 .pub/
 /build/
-
+/ios/
+/lib/
+/android/
+/test/
+flutter_app.iml
+pubspec.lock
+pubspec.yaml
+README.MD
 # Web related
 lib/generated_plugin_registrant.dart
 
