--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,12 @@
 *.pub-cache/
 *.pub/
 /build/
+/android/
+/ios/
+/test/
+*.metadata
+*pubspec.yaml
+*pubspec.lock
 
 # Web related
 lib/generated_plugin_registrant.dart
