--- a/.gitignore
+++ b/.gitignore
@@ -30,12 +30,12 @@
 *.pub-cache/
 *.pub/
 /build/
-/android/
-/ios/
-/test/
-*.metadata
-*pubspec.yaml
-*pubspec.lock
+#android/
+#/ios/
+#/test/
+#*.metadata
+#*pubspec.yaml
+#*pubspec.lock
 
 # Web related
 lib/generated_plugin_registrant.dart
